@@ -24,7 +24,6 @@ import jakarta.servlet.ServletOutputStream;
 import jakarta.servlet.WriteListener;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
-import org.apache.commons.collections.CollectionUtils;
 import org.apache.commons.io.IOUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.lang3.exception.ExceptionUtils;
@@ -39,8 +38,11 @@ import org.structr.common.AccessMode;
 import org.structr.common.SecurityContext;
 import org.structr.common.error.FrameworkException;
 import org.structr.common.event.RuntimeEventLog;
-import org.structr.core.GraphObject;
+import org.structr.common.helper.PathHelper;
 import org.structr.core.Services;
+import org.structr.core.api.AbstractMethod;
+import org.structr.core.api.Arguments;
+import org.structr.core.api.Methods;
 import org.structr.core.app.App;
 import org.structr.core.app.Query;
 import org.structr.core.app.StructrApp;
@@ -48,31 +50,42 @@ import org.structr.core.auth.Authenticator;
 import org.structr.core.auth.exception.AuthenticationException;
 import org.structr.core.auth.exception.OAuthException;
 import org.structr.core.converter.PropertyConverter;
-import org.structr.core.entity.AbstractNode;
-import org.structr.core.entity.PrincipalInterface;
+import org.structr.core.entity.Principal;
 import org.structr.core.graph.NodeInterface;
 import org.structr.core.graph.Tx;
+import org.structr.core.property.Property;
 import org.structr.core.property.PropertyKey;
 import org.structr.core.property.PropertyMap;
+import org.structr.core.property.StringProperty;
 import org.structr.core.script.Scripting;
-import org.structr.storage.StorageProviderFactory;
+import org.structr.core.traits.StructrTraits;
+import org.structr.core.traits.Traits;
+import org.structr.core.traits.definitions.GraphObjectTraitDefinition;
+import org.structr.core.traits.definitions.NodeInterfaceTraitDefinition;
+import org.structr.core.traits.definitions.UserTraitDefinition;
 import org.structr.rest.auth.AuthHelper;
 import org.structr.rest.service.HttpServiceServlet;
 import org.structr.rest.service.StructrHttpServiceConfig;
 import org.structr.rest.servlet.AbstractServletBase;
-import org.structr.schema.ConfigurationProvider;
 import org.structr.schema.action.ActionContext;
 import org.structr.schema.action.EvaluationHints;
+import org.structr.storage.StorageProviderFactory;
 import org.structr.util.Base64;
 import org.structr.web.auth.UiAuthenticator;
 import org.structr.web.common.FileHelper;
+import org.structr.web.common.PagePaths;
 import org.structr.web.common.RenderContext;
 import org.structr.web.common.RenderContext.EditMode;
 import org.structr.web.common.StringRenderBuffer;
-import org.structr.web.entity.*;
+import org.structr.web.entity.File;
+import org.structr.web.entity.Linkable;
+import org.structr.web.entity.Site;
 import org.structr.web.entity.dom.DOMElement;
 import org.structr.web.entity.dom.DOMNode;
 import org.structr.web.entity.dom.Page;
+import org.structr.web.traits.definitions.AbstractFileTraitDefinition;
+import org.structr.web.traits.definitions.LinkableTraitDefinition;
+import org.structr.web.traits.definitions.dom.PageTraitDefinition;
 
 import java.io.IOException;
 import java.io.InputStream;
@@ -87,22 +100,17 @@ import java.util.concurrent.Executors;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import org.structr.common.helper.PathHelper;
-import org.structr.core.api.AbstractMethod;
-import org.structr.core.api.Arguments;
-import org.structr.core.api.Methods;
-import org.structr.web.common.PagePaths;
 
 /**
  * Main servlet for content rendering.
  */
 public class HtmlServlet extends AbstractServletBase implements HttpServiceServlet {
 
-	private static final Logger logger = LoggerFactory.getLogger(HtmlServlet.class.getName());
+	private static final Logger logger                             = LoggerFactory.getLogger(HtmlServlet.class.getName());
+	private static final Property<String> pathPropertyForSearch    = new StringProperty("path").indexed();
 
 	public static final String CONFIRM_REGISTRATION_PAGE = "/confirm_registration";
 	public static final String RESET_PASSWORD_PAGE       = "/reset-password";
-	public static final String POSSIBLE_ENTRY_POINTS_KEY = "possibleEntryPoints";
 	public static final String DOWNLOAD_AS_FILENAME_KEY  = "filename";
 	public static final String RANGE_KEY                 = "range";
 	public static final String DOWNLOAD_AS_DATA_URL_KEY  = "as-data-url";
@@ -147,9 +155,10 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 	@Override
 	protected void doGet(final HttpServletRequest request, final HttpServletResponse response) {
 
-		final long t0                   = System.currentTimeMillis();
-		final Authenticator auth        = getConfig().getAuthenticator();
-		boolean requestUriContainsUuids = false;
+		final long t0                                   = System.currentTimeMillis();
+		final Authenticator auth                        = getConfig().getAuthenticator();
+		final Traits pageTraits                         = Traits.of(StructrTraits.PAGE);
+		boolean requestUriContainsUuids                 = false;
 
 		SecurityContext securityContext;
 		final App app;
@@ -159,6 +168,7 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 			assertInitialized();
 
 			final String path = request.getPathInfo() != null ? request.getPathInfo() : "/";
+			final String cacheKey = request.getRequestURL().toString();
 
 			// check for registration (has its own tx because of write access
 			if (checkRegistration(auth, request, response, path)) {
@@ -174,6 +184,8 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 			// isolate request authentication in a transaction
 			try (final Tx tx = StructrApp.getInstance().tx()) {
+
+				tx.prefetchHint("HTTP GET auth " + path);
 
 				securityContext = auth.initializeAndExamineRequest(request, response);
 				tx.success();
@@ -199,6 +211,8 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 			try (final Tx tx = app.tx()) {
 
+				tx.prefetchHint("HTTP GET " + path);
+
 				// Ensure access mode is frontend
 				securityContext.setAccessMode(AccessMode.Frontend);
 
@@ -218,7 +232,7 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 					return;
 				}
 
-				final PrincipalInterface user = securityContext.getUser(false);
+				final Principal user = securityContext.getUser(false);
 				if (user != null) {
 
 					// Don't cache if a user is logged in
@@ -229,11 +243,11 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 				final RenderContext renderContext = RenderContext.getInstance(securityContext, request, response);
 				final EditMode edit               = renderContext.getEditMode(user);
-
-				DOMNode rootElement   = null;
-				AbstractNode dataNode = null;
-
-				final String[] uriParts = PathHelper.getParts(path);
+				final String[] uriParts           = PathHelper.getParts(path);
+				boolean isDynamicPath             = false;
+				DOMNode rootElement               = null;
+				NodeInterface dataNode            = null;
+				File file                         = null;
 
 				if (response.getStatus() != HttpServletResponse.SC_OK) {
 
@@ -248,7 +262,7 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 					}
 				}
 
-				if (rootElement == null) {
+				if (rootElement == null && file == null) {
 
 					if (uriParts == null) {
 						logger.error("URI parts array is null, shouldn't happen.");
@@ -267,10 +281,10 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 						// special optimization for UUID-addressed partials
 						if (uriParts.length == 1 && Settings.isValidUuid(uriParts[0])) {
 
-							final AbstractNode node = findNodeByUuid(securityContext, uriParts[0]);
-							if (node != null && node instanceof DOMElement) {
+							final NodeInterface node = findNodeByUuid(securityContext, uriParts[0]);
+							if (node != null && node.is(StructrTraits.DOM_ELEMENT)) {
 
-								rootElement = (DOMElement) node;
+								rootElement = node.as(DOMElement.class);
 
 								renderContext.setIsPartialRendering(true);
 							}
@@ -279,7 +293,13 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 						if (rootElement == null) {
 
 							// check dynamic paths
-							rootElement = PagePaths.findPageAndResolveParameters(renderContext, path);
+							final DOMNode pathResult = PagePaths.findPageAndResolveParameters(renderContext, path);
+							if (pathResult != null) {
+
+								rootElement   = pathResult;
+								isDynamicPath = true;
+							}
+
 						}
 
 						if (rootElement == null) {
@@ -298,25 +318,24 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 					}
 				}
 
-				File file = null;
 
-				if (rootElement == null) { // No page found
+				if (rootElement == null && file == null) { // No page found
 
 					// In case of a file, try to find a file with the query string in the filename
 					final String queryString = request.getQueryString();
-
-					// Look for a file, first include the query string
 					if (StringUtils.isNotBlank(queryString)) {
+
+						// Look for a file, first include the query string
 						file = findFile(securityContext, request, path + "?" + queryString);
 					}
 
 					// If no file with query string in the file name found, try without query string
 					if (file == null) {
+
 						file = findFile(securityContext, request, path);
 					}
 
 					if (file == null) {
-
 
 						for (int i = 0; i < uriParts.length; i++) {
 
@@ -342,10 +361,10 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 							} else {
 
-								final AbstractNode possibleRootNode = findNodeByUuid(securityContext, PathHelper.getName(path));
+								final NodeInterface possibleRootNode = findNodeByUuid(securityContext, PathHelper.getName(path));
 
-								if (possibleRootNode instanceof DOMNode) {
-									rootElement = (DOMNode) possibleRootNode;
+								if (possibleRootNode.is(StructrTraits.DOM_NODE)) {
+									rootElement = possibleRootNode.as(DOMNode.class);
 								}
 							}
 
@@ -357,12 +376,12 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 							if (rootElement == null) {
 
-								final AbstractNode possibleRootNode = findNodeByUuid(securityContext, PathHelper.getName(pagePart));
+								final NodeInterface possibleRootNode = findNodeByUuid(securityContext, PathHelper.getName(pagePart));
 
 								// check visibleForSite here as well
-								if (possibleRootNode instanceof DOMNode && (!(possibleRootNode instanceof Page) || isVisibleForSite(request, (Page)possibleRootNode))) {
+								if (possibleRootNode != null && possibleRootNode.is(StructrTraits.DOM_NODE) && (!(possibleRootNode.is(StructrTraits.PAGE)) || isVisibleForSite(request, possibleRootNode.as(Page.class)))) {
 
-									rootElement = ((DOMNode) possibleRootNode);
+									rootElement = possibleRootNode.as(DOMNode.class);
 								}
 
 								if (rootElement == null) {
@@ -373,7 +392,7 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 								dataNode = findNodeByUuid(securityContext, PathHelper.getName(path));
 
 								if (dataNode == null) {
-									dataNode = findFirstNodeByName(securityContext, request, path);
+									dataNode = findFirstNodeByName(securityContext, path);
 								}
 
 								renderContext.setDetailsDataObject(dataNode);
@@ -386,7 +405,7 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 								} else {
 
-									dataNode = findFirstNodeByName(securityContext, request, path);
+									dataNode = findFirstNodeByName(securityContext, path);
 								}
 
 								renderContext.setDetailsDataObject(dataNode);
@@ -407,15 +426,15 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 						case Authenticated:
 
 							final Linkable result = authResult.getRootElement();
-							if (result instanceof Page) {
+							if (result.is(StructrTraits.PAGE)) {
 
-								rootElement = (DOMNode)result;
+								rootElement = result.as(DOMNode.class);
 								securityContext = authResult.getSecurityContext();
 								renderContext.pushSecurityContext(securityContext);
 
-							} else if (result instanceof File) {
+							} else if (result.is(StructrTraits.FILE)) {
 
-								streamFile(authResult.getSecurityContext(), (File)result, request, response, EditMode.NONE, true);
+								streamFile(authResult.getSecurityContext(), result.as(File.class), request, response, EditMode.NONE, true);
 								tx.success();
 								return;
 
@@ -425,11 +444,11 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 						// Page with Basic Auth found but not yet authenticated
 						case MustAuthenticate:
 
-							final Page errorPage = StructrApp.getInstance().nodeQuery(Page.class).and(StructrApp.key(Page.class, "showOnErrorCodes"), "401", false).getFirst();
-							if (errorPage != null && isVisibleForSite(request, errorPage)) {
+							final NodeInterface errorPage = StructrApp.getInstance().nodeQuery(StructrTraits.PAGE).and(pageTraits.key(PageTraitDefinition.SHOW_ON_ERROR_CODES_PROPERTY), "401", false).getFirst();
+							if (errorPage != null && isVisibleForSite(request, errorPage.as(Page.class))) {
 
 								// set error page
-								rootElement = errorPage;
+								rootElement = errorPage.as(Page.class);
 
 								// don't cache the error page
 								dontCache = true;
@@ -455,6 +474,7 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 					streamFile(securityContext, file, request, response, edit, true);
 					tx.success();
+
 					return;
 				}
 
@@ -507,24 +527,11 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 						// prepare response
 						response.setCharacterEncoding("UTF-8");
-
-						String contentType = rootElement.getProperty(StructrApp.key(Page.class, "contentType"));
-
-						if (contentType == null) {
-
-							// Default
-							contentType = "text/html;charset=UTF-8";
-						}
-
-						if (contentType.equals("text/html")) {
-							contentType = contentType.concat(";charset=UTF-8");
-						}
-
-						response.setContentType(contentType);
+						response.setContentType(getContentTypeOrDefault(rootElement));
 
 						setCustomResponseHeaders(response);
 
-						final boolean createsRawData = rootElement.getProperty(StructrApp.key(Page.class, "pageCreatesRawData"));
+						final boolean createsRawData = rootElement.is(StructrTraits.PAGE) && rootElement.as(Page.class).pageCreatesRawData();
 
 						// async or not?
 						if (isAsync && !createsRawData) {
@@ -595,6 +602,9 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 			// isolate request authentication in a transaction
 			try (final Tx tx = StructrApp.getInstance().tx()) {
+
+				tx.prefetchHint("HTTP POST auth " + path);
+
 				securityContext = auth.initializeAndExamineRequest(request, response);
 				tx.success();
 			}
@@ -602,6 +612,8 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 			final App app = StructrApp.getInstance(securityContext);
 
 			try (final Tx tx = app.tx()) {
+
+				tx.prefetchHint("HTTP POST " + path);
 
 				// Ensure access mode is frontend
 				securityContext.setAccessMode(AccessMode.Frontend);
@@ -623,7 +635,7 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 					return;
 				}
 
-				final PrincipalInterface user = securityContext.getUser(false);
+				final Principal user = securityContext.getUser(false);
 				if (user != null) {
 
 					// Don't cache if a user is logged in
@@ -634,8 +646,8 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 				final RenderContext renderContext = RenderContext.getInstance(securityContext, request, response);
 				final EditMode edit               = renderContext.getEditMode(user);
 
-				DOMNode rootElement   = null;
-				AbstractNode dataNode = null;
+				DOMNode rootElement    = null;
+				NodeInterface dataNode = null;
 
 				String[] uriParts = PathHelper.getParts(path);
 				if ((uriParts == null) || (uriParts.length == 0)) {
@@ -647,13 +659,7 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 				} else {
 
-					if (rootElement == null) {
-
-						rootElement = findPage(securityContext, path, edit);
-
-					} else {
-						dontCache = true;
-					}
+					rootElement = findPage(securityContext, path, edit);
 				}
 
 				if (rootElement == null) { // No page found
@@ -684,7 +690,7 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 					if (!requestUriContainsUuids) {
 
 						// Try to find a data node by name
-						dataNode = findFirstNodeByName(securityContext, request, path);
+						dataNode = findFirstNodeByName(securityContext, path);
 
 					} else {
 
@@ -692,21 +698,16 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 					}
 
-					if (dataNode != null && !(dataNode instanceof Linkable)) {
-
-						// Last path part matches a data node
-						// Remove last path part and try again searching for a page
-						// clear possible entry points
-						request.removeAttribute(POSSIBLE_ENTRY_POINTS_KEY);
+					if (dataNode != null && !(dataNode.is(StructrTraits.LINKABLE))) {
 
 						rootElement = findPage(securityContext, StringUtils.substringBeforeLast(path, PathHelper.PATH_SEP), edit);
 
 						renderContext.setDetailsDataObject(dataNode);
 
 						// Start rendering on data node
-						if (rootElement == null && dataNode instanceof DOMNode) {
+						if (rootElement == null && dataNode.is(StructrTraits.DOM_NODE)) {
 
-							rootElement = ((DOMNode) dataNode);
+							rootElement = dataNode.as(DOMNode.class);
 
 						}
 
@@ -724,14 +725,14 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 						// Element with Basic Auth found and authentication succeeded
 						case Authenticated:
 							final Linkable result = authResult.getRootElement();
-							if (result instanceof Page) {
+							if (result.is(StructrTraits.PAGE)) {
 
-								rootElement = (DOMNode)result;
+								rootElement = result.as(Page.class);
 								renderContext.pushSecurityContext(authResult.getSecurityContext());
 
-							} else if (result instanceof File) {
+							} else if (result.is(StructrTraits.FILE)) {
 
-								//streamFile(authResult.getSecurityContext(), (File)result, request, response, EditMode.NONE);
+								streamFile(authResult.getSecurityContext(), result.as(File.class), request, response, EditMode.NONE, true);
 								tx.success();
 								return;
 
@@ -807,20 +808,7 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 						// prepare response
 						response.setCharacterEncoding("UTF-8");
-
-						String contentType = rootElement.getProperty(StructrApp.key(Page.class, "contentType"));
-
-						if (contentType == null) {
-
-							// Default
-							contentType = "text/html;charset=UTF-8";
-						}
-
-						if (contentType.equals("text/html")) {
-							contentType = contentType.concat(";charset=UTF-8");
-						}
-
-						response.setContentType(contentType);
+						response.setContentType(getContentTypeOrDefault(rootElement));
 
 						setCustomResponseHeaders(response);
 					}
@@ -887,6 +875,8 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 					DOMNode.prefetchDOMNodes(rootNode.getUuid());
 
 					name = rootNode.getName();
+
+					tx.prefetchHint("Render page " + name);
 
 					// render
 					rootNode.render(renderContext, 0);
@@ -997,9 +987,12 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 	 */
 	private Page notFound(final HttpServletResponse response, final SecurityContext securityContext) throws IOException, FrameworkException {
 
-		final List<Page> errorPages = StructrApp.getInstance(securityContext).nodeQuery(Page.class).and(StructrApp.key(Page.class, "showOnErrorCodes"), "404", false).getAsList();
+		final PropertyKey<String> key        = Traits.of(StructrTraits.PAGE).key(PageTraitDefinition.SHOW_ON_ERROR_CODES_PROPERTY);
+		final List<NodeInterface> errorPages = StructrApp.getInstance(securityContext).nodeQuery(StructrTraits.PAGE).and(key, "404", false).getAsList();
 
-		for (final Page errorPage : errorPages) {
+		for (final NodeInterface node : errorPages) {
+
+			final Page errorPage = node.as(Page.class);
 
 			if (isVisibleForSite(securityContext.getRequest(), errorPage)) {
 
@@ -1016,9 +1009,12 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 	private Page getErrorPageForStatus(final HttpServletResponse response, final SecurityContext securityContext) throws IOException, FrameworkException {
 
-		final List<Page> errorPages = StructrApp.getInstance(securityContext).nodeQuery(Page.class).and(StructrApp.key(Page.class, "showOnErrorCodes"), "" + response.getStatus(), false).getAsList();
+		final PropertyKey<String> key        = Traits.of(StructrTraits.PAGE).key(PageTraitDefinition.SHOW_ON_ERROR_CODES_PROPERTY);
+		final List<NodeInterface> errorPages = StructrApp.getInstance(securityContext).nodeQuery(StructrTraits.PAGE).and(key, "" + response.getStatus(), false).getAsList();
 
-		for (final Page errorPage : errorPages) {
+		for (final NodeInterface node : errorPages) {
+
+			final Page errorPage = node.as(Page.class);
 
 			if (isVisibleForSite(securityContext.getRequest(), errorPage)) {
 
@@ -1035,12 +1031,11 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 	 * Find first node whose name matches the last part of the given path
 	 *
 	 * @param securityContext
-	 * @param request
 	 * @param path
 	 * @return node
 	 * @throws FrameworkException
 	 */
-	private AbstractNode findFirstNodeByName(final SecurityContext securityContext, final HttpServletRequest request, final String path) throws FrameworkException {
+	private NodeInterface findFirstNodeByName(final SecurityContext securityContext, final String path) throws FrameworkException {
 
 		final String name = PathHelper.getName(path);
 
@@ -1048,23 +1043,16 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 			logger.debug("Requested name: {}", name);
 
-			final Query query                  = StructrApp.getInstance(securityContext).nodeQuery();
-			final ConfigurationProvider config = StructrApp.getConfiguration();
+			final Query<NodeInterface> query = StructrApp.getInstance(securityContext).nodeQuery(StructrTraits.NODE_INTERFACE);
 
 			if (!possiblePropertyNamesForEntityResolving.isEmpty()) {
 
 				query.and();
-				resolvePossiblePropertyNamesForObjectResolution(config, query, name);
+				resolvePossiblePropertyNamesForObjectResolution(query, name);
 				query.parent();
 			}
 
-
-			final List<AbstractNode> results = query.getAsList();
-
-			logger.debug("{} results", results.size());
-			request.setAttribute(POSSIBLE_ENTRY_POINTS_KEY, results);
-
-			return (results.size() > 0 ? (AbstractNode) results.get(0) : null);
+			return query.getFirst();
 		}
 
 		return null;
@@ -1078,13 +1066,13 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 	 * @return node
 	 * @throws FrameworkException
 	 */
-	private AbstractNode findNodeByUuid(final SecurityContext securityContext, final String uuid) throws FrameworkException {
+	private NodeInterface findNodeByUuid(final SecurityContext securityContext, final String uuid) throws FrameworkException {
 
 		if (!uuid.isEmpty()) {
 
 			logger.debug("Requested id: {}", uuid);
 
-			return (AbstractNode) StructrApp.getInstance(securityContext).getNodeById(uuid);
+			return StructrApp.getInstance(securityContext).getNodeById(uuid);
 		}
 
 		return null;
@@ -1101,21 +1089,24 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 	 */
 	private File findFile(final SecurityContext securityContext, final HttpServletRequest request, final String path) throws FrameworkException {
 
-		List<Linkable> entryPoints = findPossibleEntryPoints(securityContext, request, path);
+		List<Linkable> entryPoints = findFiles(securityContext, request, path);
 
 		// If no results were found, try to replace whitespace by '+' or '%20'
 		if (entryPoints.isEmpty()) {
-			entryPoints = findPossibleEntryPoints(securityContext, request, PathHelper.replaceWhitespaceByPlus(path));
+			entryPoints = findFiles(securityContext, request, PathHelper.replaceWhitespaceByPlus(path));
 		}
 
 		if (entryPoints.isEmpty()) {
-			entryPoints = findPossibleEntryPoints(securityContext, request, PathHelper.replaceWhitespaceByPercentTwenty(path));
+			entryPoints = findFiles(securityContext, request, PathHelper.replaceWhitespaceByPercentTwenty(path));
 		}
 
 		for (Linkable node : entryPoints) {
 
-			if (node instanceof File && (path.equals(node.getPath()) || node.getUuid().equals(PathHelper.getName(path)))) {
-				return (File) node;
+			// prefetch file data
+			FileHelper.prefetchFileData(node.getUuid());
+
+			if (node.is(StructrTraits.FILE) && (path.equals(node.getPath()) || node.getUuid().equals(PathHelper.getName(path)))) {
+				return node.as(File.class);
 			}
 		}
 
@@ -1132,7 +1123,9 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 	 */
 	private DOMNode findPartialByName(final SecurityContext securityContext, final String name) throws FrameworkException {
 
-		for (final DOMNode potentialPartial : StructrApp.getInstance(securityContext).nodeQuery(DOMNode.class).andName(name).not().and(DOMNode.type, "Page").getAsList()) {
+		for (final NodeInterface node : StructrApp.getInstance(securityContext).nodeQuery(StructrTraits.DOM_NODE).andName(name).not().and(Traits.of(StructrTraits.GRAPH_OBJECT).key(GraphObjectTraitDefinition.TYPE_PROPERTY), StructrTraits.PAGE).getAsList()) {
+
+			final DOMNode potentialPartial = node.as(DOMNode.class);
 
 			if (potentialPartial.getOwnerDocumentAsSuperUser() != null) {
 				return potentialPartial;
@@ -1155,15 +1148,16 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 	 */
 	private Page findPage(final SecurityContext securityContext, final String path, final EditMode edit) throws FrameworkException {
 
-		final PropertyKey<String> pathKey = StructrApp.key(Page.class, "path");
-		final PropertyKey<String> nameKey = StructrApp.key(Page.class, "name");
+		final Traits traits               = Traits.of(StructrTraits.PAGE);
+		final PropertyKey<String> pathKey = traits.key(PageTraitDefinition.PATH_PROPERTY);
+		final PropertyKey<String> nameKey = traits.key(NodeInterfaceTraitDefinition.NAME_PROPERTY);
 
 		final PropertyMap attributes = new PropertyMap(pathKey, path);
 		final String name = PathHelper.getName(path);
 		attributes.put(nameKey, name);
 
 		// Find pages by path or name
-		final List<Page> possiblePages = StructrApp.getInstance(securityContext).nodeQuery(Page.class)
+		final List<NodeInterface> possiblePages = StructrApp.getInstance(securityContext).nodeQuery(StructrTraits.PAGE)
 			.or()
 				.notBlank(pathKey)
 				.and(pathKey, path)
@@ -1175,7 +1169,9 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 			.sort(pathKey)
 			.getAsList();
 
-		for (final Page page : possiblePages) {
+		for (final NodeInterface node : possiblePages) {
+
+			final Page page = node.as(Page.class);
 
 			if (EditMode.CONTENT.equals(edit) || isVisibleForSite(securityContext.getRequest(), page)) {
 
@@ -1184,13 +1180,14 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 		}
 
 		// Check direct access by UUID
+		// FIXME: the length is different depending on the uuid type setting
 		if (name.length() == 32) {
 
-			final NodeInterface possiblePage = StructrApp.getInstance(securityContext).get(NodeInterface.class, name);
+			final NodeInterface possiblePage = StructrApp.getInstance(securityContext).getNodeById(StructrTraits.NODE_INTERFACE, name);
 
-			if (possiblePage != null && possiblePage instanceof Page && (EditMode.CONTENT.equals(edit) || isVisibleForSite(securityContext.getRequest(), (Page) possiblePage))) {
+			if (possiblePage != null && possiblePage.is(StructrTraits.PAGE) && (EditMode.CONTENT.equals(edit) || isVisibleForSite(securityContext.getRequest(), possiblePage.as(Page.class)))) {
 
-				return (Page) possiblePage;
+				return possiblePage.as(Page.class);
 			}
 		}
 
@@ -1208,13 +1205,16 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 	 */
 	private Page findIndexPage(final SecurityContext securityContext, final EditMode edit) throws FrameworkException {
 
-		final PropertyKey<Integer> positionKey = StructrApp.key(Page.class, "position");
+		final Traits traits                    = Traits.of(StructrTraits.PAGE);
+		final PropertyKey<Integer> positionKey = traits.key(PageTraitDefinition.POSITION_PROPERTY);
 
-		List<Page> possiblePages = StructrApp.getInstance(securityContext).nodeQuery(Page.class).notBlank(positionKey).sort(positionKey).getAsList();
+		final List<NodeInterface> possiblePages = StructrApp.getInstance(securityContext).nodeQuery(StructrTraits.PAGE).notBlank(positionKey).sort(positionKey).getAsList();
 
-		for (Page page : possiblePages) {
+		for (final NodeInterface node : possiblePages) {
 
-			if (securityContext.isVisible(page) && ((EditMode.CONTENT.equals(edit) || isVisibleForSite(securityContext.getRequest(), page)) || (page.getEnableBasicAuth() && page.isVisibleToAuthenticatedUsers()))) {
+			final Page page = node.as(Page.class);
+
+			if (securityContext.isVisible(page) && ((EditMode.CONTENT.equals(edit) || isVisibleForSite(securityContext.getRequest(), page)) || (page.as(Linkable.class).getEnableBasicAuth() && node.isVisibleToAuthenticatedUsers()))) {
 
 				return page;
 			}
@@ -1246,23 +1246,23 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 			return false;
 		}
 
-		final PropertyKey<String> confirmationKey = StructrApp.key(User.class, "confirmationKey");
+		final PropertyKey<String> confirmationKey = Traits.of(StructrTraits.USER).key(UserTraitDefinition.CONFIRMATION_KEY_PROPERTY);
 
 		if (CONFIRM_REGISTRATION_PAGE.equals(path)) {
 
 			final App app = StructrApp.getInstance();
 
-			List<PrincipalInterface> results;
+			List<NodeInterface> results;
 			try (final Tx tx = app.tx()) {
 
-				results = app.nodeQuery(PrincipalInterface.class).and(confirmationKey, key).getAsList();
+				results = app.nodeQuery(StructrTraits.PRINCIPAL).and(confirmationKey, key).getAsList();
 
 				tx.success();
 			}
 
 			if (!results.isEmpty()) {
 
-				final PrincipalInterface user = results.get(0);
+				final NodeInterface user = results.get(0);
 				long userId;
 
 				try (final Tx tx = app.tx()) {
@@ -1274,7 +1274,7 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 						if (Settings.RestUserAutologin.getValue()) {
 
-							AuthHelper.doLogin(request, user);
+							AuthHelper.doLogin(request, user.as(Principal.class));
 
 						} else {
 
@@ -1340,23 +1340,23 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 			return false;
 		}
 
-		final PropertyKey<String> confirmationKeyKey = StructrApp.key(User.class, "confirmationKey");
+		final PropertyKey<String> confirmationKeyKey = Traits.of(StructrTraits.USER).key(UserTraitDefinition.CONFIRMATION_KEY_PROPERTY);
 
 		if (RESET_PASSWORD_PAGE.equals(path)) {
 
 			final App app = StructrApp.getInstance();
 
-			List<PrincipalInterface> results;
+			List<NodeInterface> results;
 			try (final Tx tx = app.tx()) {
 
-				results = app.nodeQuery(PrincipalInterface.class).and(confirmationKeyKey, key).getAsList();
+				results = app.nodeQuery(StructrTraits.PRINCIPAL).and(confirmationKeyKey, key).getAsList();
 
 				tx.success();
 			}
 
 			if (!results.isEmpty()) {
 
-				final PrincipalInterface user = results.get(0);
+				final NodeInterface user = results.get(0);
 				long userId;
 
 				try (final Tx tx = app.tx()) {
@@ -1370,10 +1370,10 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 							if (Settings.PasswordResetFailedCounterOnPWReset.getValue()) {
 
-								AuthHelper.resetFailedLoginAttemptsCounter(user);
+								AuthHelper.resetFailedLoginAttemptsCounter(user.as(Principal.class));
 							}
 
-							AuthHelper.doLogin(request, user);
+							AuthHelper.doLogin(request, user.as(Principal.class));
 
 						} else {
 
@@ -1408,80 +1408,38 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 	private List<Linkable> findPossibleEntryPointsByUuid(final SecurityContext securityContext, final HttpServletRequest request, final String uuid) throws FrameworkException {
 
-		final List<Linkable> possibleEntryPoints = (List<Linkable>) request.getAttribute(POSSIBLE_ENTRY_POINTS_KEY);
+		if (!uuid.isEmpty()) {
 
-		if (CollectionUtils.isNotEmpty(possibleEntryPoints)) {
-			return possibleEntryPoints;
-		}
+			final NodeInterface node = StructrApp.getInstance(securityContext).getNodeById(StructrTraits.NODE_INTERFACE, uuid);
+			if (node != null) {
 
-		if (uuid.length() > 0) {
-
-			logger.debug("Requested id: {}", uuid);
-
-			final Query query = StructrApp.getInstance(securityContext).nodeQuery();
-
-			query
-				.and()
-					.or()
-					.andTypes(Page.class)
-					.andTypes(File.class)
-					.parent()
-				.and(GraphObject.id, uuid);
-
-			// Searching for pages needs super user context anyway
-			List<Linkable> results = query.getAsList();
-
-			logger.debug("{} results", results.size());
-			request.setAttribute(POSSIBLE_ENTRY_POINTS_KEY, results);
-
-			return (List<Linkable>) results;
+				return List.of(node.as(Linkable.class));
+			}
 		}
 
 		return Collections.EMPTY_LIST;
 	}
 
-	private List<Linkable> findPossibleEntryPointsByPath(final SecurityContext securityContext, final HttpServletRequest request, final String path) throws FrameworkException {
+	private List<Linkable> findFilesByPath(final SecurityContext securityContext, final HttpServletRequest request, final String path) throws FrameworkException {
 
-		final List<Linkable> possibleEntryPoints = (List<Linkable>) request.getAttribute(POSSIBLE_ENTRY_POINTS_KEY);
-
-		if (CollectionUtils.isNotEmpty(possibleEntryPoints)) {
-			return possibleEntryPoints;
-		}
-
-		if (path.length() > 0) {
+		if (!path.isEmpty()) {
 
 			logger.debug("Requested path: {}", path);
 
-			final Query pageQuery = StructrApp.getInstance(securityContext).nodeQuery();
+			final List<Linkable> list = new LinkedList<>();
 
-			pageQuery.and(StructrApp.key(Page.class, "path"), path).andType(Page.class);
-			final List<Linkable> pages = pageQuery.getAsList();
+			for (final NodeInterface node : StructrApp.getInstance(securityContext).nodeQuery(StructrTraits.LINKABLE).and(pathPropertyForSearch, path).getResultStream()) {
 
-			final Query fileQuery = StructrApp.getInstance(securityContext).nodeQuery();
-			fileQuery.and(StructrApp.key(AbstractFile.class, "path"), path).andTypes(File.class);
+				list.add(node.as(Linkable.class));
+			}
 
-			final List<Linkable> files = fileQuery.getAsList();
-
-			logger.debug("Found {} pages and {} files/folders", new Object[] { pages.size(), files.size() });
-
-			final List<Linkable> linkables = (List<Linkable>) pages;
-			linkables.addAll(files);
-
-			request.setAttribute(POSSIBLE_ENTRY_POINTS_KEY, linkables);
-
-			return linkables;
+			return list;
 		}
 
 		return Collections.EMPTY_LIST;
 	}
 
-	private List<Linkable> findPossibleEntryPoints(final SecurityContext securityContext, final HttpServletRequest request, final String path) throws FrameworkException {
-
-		List<Linkable> possibleEntryPoints = (List<Linkable>) request.getAttribute(POSSIBLE_ENTRY_POINTS_KEY);
-
-		if (CollectionUtils.isNotEmpty(possibleEntryPoints)) {
-			return possibleEntryPoints;
-		}
+	private List<Linkable> findFiles(final SecurityContext securityContext, final HttpServletRequest request, final String path) throws FrameworkException {
 
 		final int numberOfParts = PathHelper.getParts(path).length;
 
@@ -1489,7 +1447,7 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 			logger.debug("Requested name {}", path);
 
-			possibleEntryPoints = findPossibleEntryPointsByPath(securityContext, request, path);
+			List<Linkable> possibleEntryPoints = findFilesByPath(securityContext, request, path);
 
 			if (possibleEntryPoints.isEmpty() && numberOfParts == 1) {
 				possibleEntryPoints = findPossibleEntryPointsByUuid(securityContext, request, PathHelper.getName(path));
@@ -1510,6 +1468,8 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 	private static boolean notModifiedSince(final HttpServletRequest request, HttpServletResponse response, final NodeInterface node, final boolean dontCache) {
 
+		final long t0 = System.currentTimeMillis();
+
 		boolean notModified = false;
 		final Date lastModified = node.getLastModifiedDate();
 
@@ -1520,7 +1480,7 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 		response.setHeader("Date", httpDateFormat.format(new Date()));
 
-		final Integer seconds = node instanceof Page ? ((Page)node).getCacheForSeconds() : (node instanceof File ? ((File)node).getCacheForSeconds() : null);
+		final Integer seconds = node.is(StructrTraits.PAGE) ? node.as(Page.class).getCacheForSeconds() : (node.is(StructrTraits.FILE) ? node.as(File.class).getCacheForSeconds() : null);
 		final Calendar cal    = new GregorianCalendar();
 
 		if (!dontCache && seconds != null) {
@@ -1579,6 +1539,8 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 			return;
 		}
 
+		final long t0 = System.currentTimeMillis();
+
 		final ServletOutputStream out         = response.getOutputStream();
 		final String downloadAsFilename       = request.getParameter(DOWNLOAD_AS_FILENAME_KEY);
 		final Map<String, Object> callbackMap = new LinkedHashMap<>();
@@ -1601,7 +1563,7 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 			callbackMap.put("requestedFileName", downloadAsFilename);
 		}
 
-		boolean dontCache = file.getProperty(StructrApp.key(File.class, "dontCache"));
+		boolean dontCache = file.dontCache();
 
 		if (!EditMode.WIDGET.equals(edit) && notModifiedSince(request, response, file, dontCache)) {
 
@@ -1724,14 +1686,13 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 			}
 		}
 
-
 		// WIDGET mode means "opened in frontend", which we don't want to count as an external download
 		if (!EditMode.WIDGET.equals(edit)) {
 
 			// call onDownload callback
 			try {
 
-				final AbstractMethod method = Methods.resolveMethod(file.getClass(), "onDownload");
+				final AbstractMethod method = Methods.resolveMethod(file.getTraits(), "onDownload");
 				if (method != null) {
 
 					method.execute(securityContext, file, Arguments.fromMap(callbackMap), new EvaluationHints());
@@ -1781,13 +1742,13 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 	}
 
-	private void resolvePossiblePropertyNamesForObjectResolution(final ConfigurationProvider config, final Query query, final String name) {
+	private void resolvePossiblePropertyNamesForObjectResolution(final Query query, final String name) {
 
 		for (final String possiblePropertyName : possiblePropertyNamesForEntityResolving) {
 
 			final String[] parts = possiblePropertyName.split("\\.");
-			String className     = AbstractNode.class.getSimpleName();
-			String keyName       = AbstractNode.name.jsonName();
+			String className     = StructrTraits.NODE_INTERFACE;
+			String keyName       = "name";
 
 			switch (parts.length) {
 
@@ -1803,10 +1764,10 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 			if (StringUtils.isNoneBlank(className, keyName)) {
 
-				final Class type = config.getNodeEntityClass(className);
-				if (type != null) {
+				final Traits traits = Traits.of(className);
+				if (traits != null) {
 
-					final PropertyKey key = StructrApp.key(type, keyName);
+					final PropertyKey key = traits.key(keyName);
 					if (key != null) {
 
 						try {
@@ -1840,36 +1801,36 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 	private HttpBasicAuthResult checkHttpBasicAuth(final SecurityContext outerSecurityContext, final HttpServletRequest request, final HttpServletResponse response, final String path) throws IOException, FrameworkException {
 
-		final PropertyKey<Boolean> basicAuthKey     = StructrApp.key(Linkable.class, "enableBasicAuth");
-		final PropertyKey<Integer> positionKey      = StructrApp.key(Page.class, "position");
-		final PropertyKey<String> filePathKey       = StructrApp.key(File.class, "path");
-		final PropertyKey<String> pagePathKey       = StructrApp.key(Page.class, "path");
+		final PropertyKey<Boolean> basicAuthKey     = Traits.of(StructrTraits.LINKABLE).key(LinkableTraitDefinition.ENABLE_BASIC_AUTH_PROPERTY);
+		final PropertyKey<Integer> positionKey      = Traits.of(StructrTraits.PAGE).key(PageTraitDefinition.POSITION_PROPERTY);
+		final PropertyKey<String> filePathKey       = Traits.of(StructrTraits.FILE).key(AbstractFileTraitDefinition.PATH_PROPERTY);
+		final PropertyKey<String> pagePathKey       = Traits.of(StructrTraits.PAGE).key(PageTraitDefinition.PATH_PROPERTY);
 
 		// Look for renderable objects using a SuperUserSecurityContext,
 		// but dont actually render the page. We're only interested in
 		// the authentication settings.
-		Linkable possiblePage = null;
+		NodeInterface possiblePage = null;
 
 		// try the different methods..
 		if (possiblePage == null) {
-			possiblePage = StructrApp.getInstance().nodeQuery(Page.class).and(pagePathKey, path).and(basicAuthKey, true).sort(positionKey).getFirst();
+			possiblePage = StructrApp.getInstance().nodeQuery(StructrTraits.PAGE).and(pagePathKey, path).and(basicAuthKey, true).sort(positionKey).getFirst();
 		}
 
 		if (possiblePage == null) {
-			possiblePage = StructrApp.getInstance().nodeQuery(Page.class).and(Page.name, PathHelper.getName(path)).and(basicAuthKey, true).sort(positionKey).getFirst();
+			possiblePage = StructrApp.getInstance().nodeQuery(StructrTraits.PAGE).and(Traits.of(StructrTraits.PAGE).key(NodeInterfaceTraitDefinition.NAME_PROPERTY), PathHelper.getName(path)).and(basicAuthKey, true).sort(positionKey).getFirst();
 		}
 
 		if (possiblePage == null) {
-			possiblePage = StructrApp.getInstance().nodeQuery(File.class).and(filePathKey, path).and(basicAuthKey, true).getFirst();
+			possiblePage = StructrApp.getInstance().nodeQuery(StructrTraits.FILE).and(filePathKey, path).and(basicAuthKey, true).getFirst();
 		}
 
 		if (possiblePage == null) {
-			possiblePage = StructrApp.getInstance().nodeQuery(File.class).and(File.name, PathHelper.getName(path)).and(basicAuthKey, true).getFirst();
+			possiblePage = StructrApp.getInstance().nodeQuery(StructrTraits.FILE).and(Traits.of(StructrTraits.FILE).key(NodeInterfaceTraitDefinition.NAME_PROPERTY), PathHelper.getName(path)).and(basicAuthKey, true).getFirst();
 		}
 
 		if (possiblePage != null) {
 
-			String realm = possiblePage.getBasicAuthRealm();
+			String realm = possiblePage.as(Linkable.class).getBasicAuthRealm();
 			if (realm == null) {
 
 				realm = possiblePage.getName();
@@ -1878,7 +1839,7 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 			}
 
 			// check Http Basic Authentication headers
-			final PrincipalInterface principal = getPrincipalForAuthorizationHeader(request.getHeader("Authorization"));
+			final Principal principal = getPrincipalForAuthorizationHeader(request.getHeader("Authorization"));
 			if (principal != null) {
 
 				final SecurityContext securityContext = SecurityContext.getInstance(principal, AccessMode.Frontend);
@@ -1886,13 +1847,13 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 					// find and instantiate the page again so that the SuperUserSecurityContext
 					// can not leak into any of the children of the given page. This is dangerous..
-					final Linkable page = StructrApp.getInstance(securityContext).get(Linkable.class, possiblePage.getUuid());
+					final NodeInterface page = StructrApp.getInstance(securityContext).getNodeById(StructrTraits.LINKABLE, possiblePage.getUuid());
 					if (page != null) {
 
 						securityContext.setRequest(request);
 						securityContext.setResponse(response);
 
-						return new HttpBasicAuthResult(AuthState.Authenticated, securityContext, page);
+						return new HttpBasicAuthResult(AuthState.Authenticated, securityContext, page.as(Linkable.class));
 					}
 				}
 			}
@@ -1911,7 +1872,7 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 		return HttpBasicAuthResult.NO_BASIC_AUTH;
 	}
 
-	private PrincipalInterface getPrincipalForAuthorizationHeader(final String authHeader) {
+	private Principal getPrincipalForAuthorizationHeader(final String authHeader) {
 
 		if (authHeader != null) {
 
@@ -1938,7 +1899,7 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 				if (StringUtils.isNoneBlank(username, password)) {
 
 					try {
-						return AuthHelper.getPrincipalForPassword(PrincipalInterface.name, username, password);
+						return AuthHelper.getPrincipalForPassword(Traits.of(StructrTraits.PRINCIPAL).key(NodeInterfaceTraitDefinition.NAME_PROPERTY), username, password);
 
 					} catch (Throwable t) {
 						// ignore
@@ -1948,6 +1909,26 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 		}
 
 		return null;
+	}
+
+	private String getContentTypeOrDefault(final DOMNode rootElement) {
+
+		String contentType = "text/html;charset=UTF-8";
+
+		if (rootElement.is(StructrTraits.PAGE)) {
+
+			final String possibleContentType = rootElement.as(Page.class).getContentType();
+			if (StringUtils.isNotBlank(possibleContentType)) {
+
+				contentType = possibleContentType;
+
+				if (contentType.equals("text/html")) {
+					contentType = contentType.concat(";charset=UTF-8");
+				}
+			}
+		}
+
+		return contentType;
 	}
 
 	public static String filterMaliciousRedirects(final String source) {
@@ -1977,6 +1958,7 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 		return null;
 	}
+
 	// ----- nested classes -----
 	private enum AuthState {
 		NoBasicAuth, MustAuthenticate, Authenticated
@@ -2013,6 +1995,28 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 		public Linkable getRootElement() {
 			return rootElement;
+		}
+	}
+
+	private static class UuidCacheEntry {
+
+		String fileUuid = null;
+		String domUuid  = null;
+		String dataUuid = null;
+
+		public UuidCacheEntry(final DOMNode domNode, final File fileNode, final NodeInterface dataNode) {
+
+			if (domNode != null) {
+				this.domUuid = domNode.getUuid();
+			}
+
+			if (fileNode != null) {
+				this.fileUuid = fileNode.getUuid();
+			}
+
+			if (dataNode != null) {
+				this.dataUuid = dataNode.getUuid();
+			}
 		}
 	}
 }
