@@ -27,21 +27,19 @@ import org.slf4j.LoggerFactory;
 import org.structr.api.Predicate;
 import org.structr.api.graph.RelationshipType;
 import org.structr.api.util.Iterables;
-import org.structr.common.AccessControllable;
 import org.structr.common.SecurityContext;
 import org.structr.common.error.FrameworkException;
 import org.structr.core.GraphObject;
 import org.structr.core.StructrTransactionListener;
-import org.structr.core.entity.AbstractNode;
-import org.structr.core.entity.Group;
-import org.structr.core.entity.PrincipalInterface;
 import org.structr.core.graph.ModificationEvent;
 import org.structr.core.graph.NodeInterface;
 import org.structr.core.graph.RelationshipInterface;
 import org.structr.core.property.PropertyKey;
 import org.structr.core.property.PropertyMap;
-import org.structr.web.entity.AbstractFile;
-import org.structr.web.entity.User;
+import org.structr.core.traits.StructrTraits;
+import org.structr.core.traits.Traits;
+import org.structr.core.traits.definitions.GraphObjectTraitDefinition;
+import org.structr.core.traits.definitions.PrincipalTraitDefinition;
 import org.structr.web.entity.dom.DOMNode;
 import org.structr.websocket.message.MessageBuilder;
 import org.structr.websocket.message.WebSocketMessage;
@@ -55,15 +53,14 @@ import java.util.concurrent.ConcurrentHashMap;
  */
 public class WebsocketController implements StructrTransactionListener {
 
-	private static final Logger logger                 = LoggerFactory.getLogger(WebsocketController.class.getName());
-	private static final Set<String> BroadcastCommands = new HashSet<>(Arrays.asList("UPDATE", "ADD", "CREATE"));
+	private static final Logger logger                                   = LoggerFactory.getLogger(WebsocketController.class.getName());
+	private static final Set<String> BroadcastCommands                   = Set.of("UPDATE", "ADD", "CREATE");
+	private static final Set<String> BroadcastBlacklistForNodeTypes      = Set.of("IndexedWord");
+	private static final Set<String> BroadcastBlacklistForNodeProperties = Set.of(PrincipalTraitDefinition.GRANTED_NODES_PROPERTY, PrincipalTraitDefinition.OWNED_NODES_PROPERTY);
+	private static final Set<String> BroadcastBlacklistForRelTypes       = Set.of("INDEXED_WORD");
 
 	private final Set<StructrWebSocket> clients = ConcurrentHashMap.newKeySet();
 	private Gson gson                           = null;
-
-	private static final Set<String> BroadcastBlacklistForNodeTypes           = new HashSet<>(Arrays.asList("IndexedWord"));
-	private static final Set<PropertyKey> BroadcastBlacklistForNodeProperties = new HashSet<>(Arrays.asList(PrincipalInterface.grantedNodes, PrincipalInterface.ownedNodes));
-	private static final Set<String> BroadcastBlacklistForRelTypes            = new HashSet<>(Arrays.asList("INDEXED_WORD"));
 
 	public WebsocketController(final Gson gson) {
 
@@ -159,7 +156,7 @@ public class WebsocketController implements StructrTransactionListener {
 	}
 
 	private <T extends GraphObject> Iterable<T> filter(final SecurityContext securityContext, final Iterable<T> all) {
-		return Iterables.filter(e -> { return securityContext.isVisible((AccessControllable)e); }, all);
+		return Iterables.filter(e -> securityContext.isVisible(e), all);
 	}
 
 	// ----- interface StructrTransactionListener -----
@@ -193,6 +190,7 @@ public class WebsocketController implements StructrTransactionListener {
 	private WebSocketMessage getMessageForEvent(final SecurityContext securityContext, final ModificationEvent modificationEvent) throws FrameworkException {
 
 		final String callbackId = modificationEvent.getCallbackId();
+		final PropertyKey<String> idProperty = Traits.of(StructrTraits.GRAPH_OBJECT).key(GraphObjectTraitDefinition.ID_PROPERTY);
 
 		if (modificationEvent.isNode()) {
 
@@ -202,7 +200,7 @@ public class WebsocketController implements StructrTransactionListener {
 
 				final WebSocketMessage message = createMessage("DELETE", callbackId);
 
-				message.setId(modificationEvent.getRemovedProperties().get(GraphObject.id));
+				message.setId(modificationEvent.getRemovedProperties().get(idProperty));
 				message.setCode(200);
 
 				return message;
@@ -211,7 +209,7 @@ public class WebsocketController implements StructrTransactionListener {
 			if (BroadcastBlacklistForNodeTypes.contains(node.getType())) {
 				return null;
 			}
-			if (modificationEvent.getModifiedProperties().keySet().stream().anyMatch((property) -> { return BroadcastBlacklistForNodeProperties.contains(property); })) {
+			if (modificationEvent.getModifiedProperties().keySet().stream().anyMatch((property) -> { return BroadcastBlacklistForNodeProperties.contains(property.jsonName()); })) {
 				return null;
 			}
 
@@ -282,7 +280,7 @@ public class WebsocketController implements StructrTransactionListener {
 
 			// handle relationship
 			final RelationshipInterface relationship = (RelationshipInterface) modificationEvent.getGraphObject();
-			final RelationshipType relType = modificationEvent.getRelationshipType();
+			final RelationshipType relType           = modificationEvent.getRelationshipType();
 
 			if (BroadcastBlacklistForRelTypes.contains(relType.name())) {
 				return null;
@@ -305,8 +303,8 @@ public class WebsocketController implements StructrTransactionListener {
 				if (modificationEvent.isCreated()) {
 
 					final WebSocketMessage message = new WebSocketMessage();
-					final NodeInterface startNode = relationship.getSourceNode();
-					final NodeInterface endNode = relationship.getTargetNode();
+					final NodeInterface startNode      = relationship.getSourceNode();
+					final NodeInterface endNode        = relationship.getTargetNode();
 
 					// If either start or end node are not visible for the user to be notified,
 					// don't send a notification
@@ -314,28 +312,28 @@ public class WebsocketController implements StructrTransactionListener {
 						return null;
 					}
 
-					message.setResult(Arrays.asList(new GraphObject[]{endNode}));
+					message.setResult(Arrays.asList(endNode));
 					message.setId(endNode.getUuid());
 					message.setNodeData("parentId", startNode.getUuid());
 
 					message.setCode(200);
 					message.setCommand("APPEND_CHILD");
 
-					if (endNode instanceof DOMNode) {
+					if (endNode.is(StructrTraits.DOM_NODE)) {
 
-						org.w3c.dom.Node refNode = ((DOMNode) endNode).getNextSibling();
+						DOMNode refNode = endNode.as(DOMNode.class).getNextSibling();
 						if (refNode != null) {
 
 							message.setCommand("INSERT_BEFORE");
-							message.setNodeData("refId", ((AbstractNode) refNode).getUuid());
+							message.setNodeData("refId", refNode.getUuid());
 						}
 
-					} else if (endNode instanceof User || endNode instanceof Group) {
+					} else if (endNode.is(StructrTraits.USER) || endNode.is(StructrTraits.GROUP)) {
 
 						message.setCommand("APPEND_MEMBER");
 						message.setNodeData("refId", startNode.getUuid());
 
-					} else if (endNode instanceof AbstractFile) {
+					} else if (endNode.is(StructrTraits.ABSTRACT_FILE)) {
 
 						message.setCommand("APPEND_FILE");
 						message.setNodeData("refId", startNode.getUuid());
@@ -348,7 +346,7 @@ public class WebsocketController implements StructrTransactionListener {
 			if (modificationEvent.isDeleted()) {
 
 				final WebSocketMessage message = createMessage("DELETE", callbackId);
-				message.setId(modificationEvent.getRemovedProperties().get(GraphObject.id));
+				message.setId(modificationEvent.getRemovedProperties().get(idProperty));
 				message.setCode(200);
 
 				return message;
@@ -373,7 +371,7 @@ public class WebsocketController implements StructrTransactionListener {
 				//relProperties.put(new StringProperty("startNodeId"), startNode.getUuid());
 				//relProperties.put(new StringProperty("endNodeId"), endNode.getUuid());
 
-				final Map<String, Object> properties = PropertyMap.javaTypeToInputType(securityContext, relationship.getClass(), relProperties);
+				final Map<String, Object> properties = PropertyMap.javaTypeToInputType(securityContext, relationship.getType(), relProperties);
 
 				message.setRelData(properties);
 
